public/style.css
body {
}

body,
button {
  font-family: 'Permanent Marker', cursive;
}

a {
  text-decoration: none;
}

a:link,
a:visited {
  text-decoration: none;
  color: whitesmoke;
}

a:hover {
  color: #ffd452;
  transition: all 0.3s linear;
}

label {
  display: block;
}

nav a {
  display: inline-block;
  margin: 1em;
}

form div {
  margin: 1em;
  display: inline-block;
}

.StoreName {
  background-image: url('Marvel.gif');
  background-repeat: no-repeat;
  background-size: cover;
  background-color: #cccccc;
  display: flex;
  justify-content: space-around;
  align-items: center;
  height: 85px;
  padding: 30px 10px;
  color: whitesmoke;
  font-size: 75px;
}
nav {
  align-items: center;
  background: #0f0c29; /* fallback for old browsers */
  background: -webkit-linear-gradient(
    to left,
    #24243e,
    #302b63,
    #0f0c29
  ); /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(
    to left,
    #24243e,
    #302b63,
    #0f0c29
  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */

  color: #f1e4e7;
  display: flex;
  justify-content: space-around;
  height: 20px;
  padding: 30px 10px;
  align-items: baseline;
  font-size: 20px;
}
.navText {
  color: whitesmoke;
}
.NavList {
  list-style-type: none;
}
.NavList li:hover {
}

.NavList .ListItem {
  display: inline-block;
  color: white;
  text-decoration: none;
}
.NavBar {
  flex-direction: column;
}

